# fast_unzip

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
fast_unzip/: __main__.py  custom_exceptions.py  fast_unzip.py
src/fast_unzip/: __main__.py  fast_unzip.py
