[tool.poetry]
name = "fast-unzip"
version = "1.3.2"
description = "Fast multithread/multiprocess unzipper"
authors = ["Nikita Pshenko <pshenko1999@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "fast_unzip"}]
homepage = "https://github.com/Inferno2899/fast_unzip.git"
repository = "https://github.com/Inferno2899/fast_unzip.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 88

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fast_unzip = "fast_unzip.fast_unzip:main"
